v1.2.5
- TWEAK: Improve WooCommerce quantity increment buttons CSS (larger size, more mobile friendly).
- TWEAK: Improve WooCommerce quantity increment buttons JS.

v1.2.4
- NEW: Update Google Fonts list (from 916 fonts to 977 fonts).
- NEW: Option to hide featured image on blog posts layout (Default and Grid layout).
- FIX: Header submenu style.
- FIX: Gutenberg `alignwide` and `alignfull` CSS.

v1.2.3
- FIX: Header mobile drawer's overflow scrolling CSS.
- FIX: Page header background bug when WooCommerce shop page set as front page.
- FIX: Page header title bug when WooCommerce shop page set as front page.
- FIX: WooCommerce's star's color CSS in the review form page.
- FIX: WooCommerce's "My Account" page CSS for non-logged in users.

v1.2.2
- FIX: WooCommerce's product review CSS on mobile devices.
- FIX: Brizy Integration's CSS reset bug on Safari when using light text on dark background.

v1.2.1
- FIX: Theme's typography bug inside Gutenberg editor (overriding custom typography settings from 3rd party addons).
- FIX: Overlapping select2 CSS on the admin's metabox.

v1.2.0
- NEW: Implement template inheritances using template files (via custom `get_template_part` function). Developers could easily override template files from Child Theme.
- NEW: Social links widget.
- NEW: Items gap options for Post Layout: Default.
- NEW: Excerpt options for Post Layout: Default.
- NEW: Excerpt options for Post Layout: Grid.
- NEW: Additional style options for Post Layout: Default - items gap.
- NEW: Additional style options for Post Layout: Grid - padding, border.
- NEW: Filter `suki/frontend/meta_avatar_size` to change gravatar size on entry meta.
- NEW: Migration process to v1.2.0.
- TWEAK: Improve Brizy integration.
- TWEAK: Improve dynamic custom CSS generation performance by filtering the CSS array based on the saved theme options only.
- TWEAK: Improve string on post navigation to avoid wrong translation on the "%title" syntax.
- TWEAK: Improve Gutenberg CSS.